--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 2,
 
   "name": "Is It Relevant?",
-  "version": "0.1.0",
-  "description": "Fades and distorts old articles on the web so you can see what’s fresh",
+  "version": "0.2.0",
+  "description": "Tells you if an article is over a week old.",
 
   "content_scripts": [{
     "css": ["styles.css"],
